[project]
name = "flet-clashofclans"
version = "0.1.0"
description = ""
authors = [{name = "Sergio Luiz Semprebom",email = "sergiosemprebom@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["flet (>=0.27.6,<0.28.0)", "flet-desktop (>=0.27.6,<0.28.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool-poetry]
packages = [{include = "src/storage"}]